  Gui:
    - Improved horizontal alignment of productivity labels on trade arrows.
    - Coin amounts for "Stack Value (Total)" in item tooltips are now rounded to four significant figures instead of zero digits after the decimal.
    - Added custom sprites for hexa modules, courtesy Steb GlitchyFishy.
  Bugfixes:
    - Fixed that sink/generator mode did not reliably create trades with a 10:1 input-to-output efficiency.
    - Fixed missing locale for electric damage / shooting speed.
    - Fixed crash on teleporting to a hex core by hotkey while you have an equipment grid open.
    - Fixed rare crash when enhancing item buffs.
    - Fixed that trading at higher qualities was using the wrong productivity progress bar.
    - Fixed that hexaprisms weren't registered as raw items, where the "unresearched productivity penalty" was always being applied to it.
  Locale:
    - Added additional info to the mod settings for "Base Trade Productivity" to help explain what "trade productivity" is.
  Optimizations:
    - Optimized trade item count selection: O(n) -> O(logn).
    - Made the catalog GUI stop trying to refresh when player inventories change if the player doesn't have the catalog GUI open (small optimization).
---------------------------------------------------------------------------------------------------
Version: 1.4.3
Date: 19/12/25
  Features:
    - Unlocked from the "First Silver Star" quest, you can now make single-batch trades within your inventory at the press of a button in the hex core GUI.
  Minor Features:
    - Added "buy max" button in Quantum Bazaar for buying as many items as can fit in your inventory.
    - Added mod settings for managing trade overview processing rates: "Trade Batching Threshold", "Trade Collection Batch Size", "Trade Filtering Batch Size", "Trade Sorting Batch Size".
    - Added the missing item buff for logistic science packs.
  Changes:
    - The Quantum Bazaar slider now only lets you go up to what you can afford.