@@ -609,6 +609,9 @@ calculation-breakdown=Calculation Breakdown
 net-coins-per-hour=Net coins per hour: __1__
 normalize-to-interval=Scale down to [color=255,192,255]__2__-second[.color] interval: __1__
 buff-effect=Apply total buff effect (__2__): __1__
+productivity-meter=[font=__3__][color=__2__]Productivity Meter:[.color][.font] __1__
+positive-prod-description=Works exactly like normal productivity in machines. Receive a free batch of this trade's outputs when the bar fills up.
+negative-prod-description=Receive a batch of this trade's outputs when the bar fills up, but don't receive anything if it doesn't fill up from an input batch. You only receive items when the bar fills up.\n\n[color=pink]The bar fills more slowly with "more negative" productivity.[.color]
 
 [quantum-bazaar]
 sell-in-hand-header=Sell in Hand
